margin, BEM adjustments

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     
                 <div class="page-content">
                     <section class="features">
-                        <h2 class="section-title">Особенности</h2>
-                        <ul class="features-list">
-                            <li class="features-item">
-                                <div class="features-item__icon">
-                                    <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="features-item__icon-img">
+                        <h2 class="section-title section-title--margin--s">Особенности</h2>
+                        <ul class="features__list">
+                            <li class="features__item">
+                                <div class="feature__icon">
+                                    <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="feature__icon-img">
                                 </div>
-                                <h3 class="features-item__title">Уникальность</h3>
+                                <h3 class="feature__title">Уникальность</h3>
                                 <div class="feature-description">
                                     <p class="feature-description__text">
                                         Создан для вашего комфортного отдыха
@@ -67,11 +67,11 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="features-item">
-                                <div class="features-item__icon">
-                                    <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="features-item__icon-img">
+                            <li class="features__item">
+                                <div class="feature__icon">
+                                    <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="feature__icon-img">
                                 </div>
-                                <h3 class="features-item__title">Премиум-класс</h3>
+                                <h3 class="feature__title">Премиум-класс</h3>
                                 <div class="feature-description">
                                     <p class="feature-description__text">
                                         Для любителей хороших впечатлений
@@ -83,11 +83,11 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="features-item">
-                                <div class="features-item__icon">
-                                    <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="features-item__icon-img">
+                            <li class="features__item">
+                                <div class="feature__icon">
+                                    <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="feature__icon-img">
                                 </div>
-                                <h3 class="features-item__title">Лакшери-стулья</h3>
+                                <h3 class="feature__title">Лакшери-стулья</h3>
                                 <div class="feature-description">
                                     <p class="feature-description__text">
                                         Всё самое лучшее и незабываемое
@@ -103,9 +103,9 @@
                     </section>
     
                     <section class="news">
-                        <h2 class="section-title">Последние новости</h2>
-                        <ul class="news-list">
-                            <li class="news-item">
+                        <h2 class="section-title section-title--margin--m">Последние новости</h2>
+                        <ul class="news__list">
+                            <li class="news__item">
                                 <div class="news__avatar">
                                     <div class="news__avatar-frame">
                                         <img src="img/news1.jpg" alt="Чёрная дыра">
@@ -119,7 +119,7 @@
                                     </p>
                                 </div>
                             </li>
-                            <li class="news-item">
+                            <li class="news__item">
                                 <div class="news__avatar">
                                     <div class="news__avatar-frame">
                                         <img src="img/news2.jpg" alt="Заражай друзей">
@@ -134,7 +134,7 @@
                                     </p>
                                 </div>
                             </li>
-                            <li class="news-item">
+                            <li class="news__item">
                                 <div class="news__avatar">
                                     <div class="news__avatar-frame">
                                         <img src="img/news3.jpg" alt="Рабочее место">
