--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                         <h2 class="section-title section-title--margin--s">Особенности</h2>
                         <ul class="features__list">
                             <li class="features__item">
-                                <div class="feature__icon">
-                                    <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="feature__icon-img">
+                                <div class="features__icon">
+                                    <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="features__icon-img">
                                 </div>
-                                <h3 class="feature__title">Уникальность</h3>
+                                <h3 class="features__title">Уникальность</h3>
                                 <div class="feature-description">
                                     <p class="feature-description__text">
                                         Создан для вашего комфортного отдыха
@@ -68,10 +68,10 @@
                                 </div>
                             </li>
                             <li class="features__item">
-                                <div class="feature__icon">
-                                    <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="feature__icon-img">
+                                <div class="features__icon">
+                                    <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="features__icon-img">
                                 </div>
-                                <h3 class="feature__title">Премиум-класс</h3>
+                                <h3 class="features__title">Премиум-класс</h3>
                                 <div class="feature-description">
                                     <p class="feature-description__text">
                                         Для любителей хороших впечатлений
@@ -84,10 +84,10 @@
                                 </div>
                             </li>
                             <li class="features__item">
-                                <div class="feature__icon">
-                                    <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="feature__icon-img">
+                                <div class="features__icon">
+                                    <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="features__icon-img">
                                 </div>
-                                <h3 class="feature__title">Лакшери-стулья</h3>
+                                <h3 class="features__title">Лакшери-стулья</h3>
                                 <div class="feature-description">
                                     <p class="feature-description__text">
                                         Всё самое лучшее и незабываемое
