--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                                         <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="features__icon-img">
                                     </div>
                                     <h3 class="features__title">Уникальность</h3>
-                                    <div class="feature-description">
-                                        <p class="feature-description__text">
+                                    <div class="features__description">
+                                        <p class="features__description-text">
                                             Создан для вашего комфортного отдыха
                                         </p>
-                                        <ul class="feature-description__list">
-                                            <li class="feature-description__item">Кофе/чай</li>
-                                            <li class="feature-description__item">Шкаф (5 кг)</li>
-                                            <li class="feature-description__item">Рабочее место</li>
+                                        <ul class="features__description-list">
+                                            <li class="features__description-item">Кофе/чай</li>
+                                            <li class="features__description-item">Шкаф (5 кг)</li>
+                                            <li class="features__description-item">Рабочее место</li>
                                         </ul>
                                     </div>
                                 </li>
@@ -74,14 +74,14 @@
                                         <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="features__icon-img">
                                     </div>
                                     <h3 class="features__title">Премиум-класс</h3>
-                                    <div class="feature-description">
-                                        <p class="feature-description__text">
+                                    <div class="features__description">
+                                        <p class="features__description-text">
                                             Для любителей хороших впечатлений
                                         </p>
-                                        <ul class="feature-description__list">
-                                            <li class="feature-description__item">Обед+кофе</li>
-                                            <li class="feature-description__item">Шкаф (10 кг)</li>
-                                            <li class="feature-description__item">Детское кресло</li>
+                                        <ul class="features__description-list">
+                                            <li class="features__description-item">Обед+кофе</li>
+                                            <li class="features__description-item">Шкаф (10 кг)</li>
+                                            <li class="features__description-item">Детское кресло</li>
                                         </ul>
                                     </div>
                                 </li>
@@ -90,14 +90,14 @@
                                         <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="features__icon-img">
                                     </div>
                                     <h3 class="features__title">Лакшери-стулья</h3>
-                                    <div class="feature-description">
-                                        <p class="feature-description__text">
+                                    <div class="features__description">
+                                        <p class="features__description-text">
                                             Всё самое лучшее и незабываемое
                                         </p>
-                                        <ul class="feature-description__list">
-                                            <li class="feature-description__item">Джакузи</li>
-                                            <li class="feature-description__item">Шкаф (15 кг)</li>
-                                            <li class="feature-description__item">Табуретка</li>
+                                        <ul class="features__description-list">
+                                            <li class="features__description-item">Джакузи</li>
+                                            <li class="features__description-item">Шкаф (15 кг)</li>
+                                            <li class="features__description-item">Табуретка</li>
                                         </ul>
                                     </div>
                                 </li>
@@ -110,7 +110,7 @@
                                 <li class="news__item">
                                     <div class="news__avatar">
                                         <div class="news__avatar-frame">
-                                            <img src="img/news1.jpg" alt="Чёрная дыра">
+                                            <img src="img/news1.jpg" alt="Чёрная дыра" class="news__avatar-img">
                                         </div>
                                     </div>
                                     <div class="news__content">
@@ -124,7 +124,7 @@
                                 <li class="news__item">
                                     <div class="news__avatar">
                                         <div class="news__avatar-frame">
-                                            <img src="img/news2.jpg" alt="Заражай друзей">
+                                            <img src="img/news2.jpg" alt="Заражай друзей" class="news__avatar-img">
                                         </div>
                                     </div>
                                     <div class="news__content">
@@ -139,7 +139,7 @@
                                 <li class="news__item">
                                     <div class="news__avatar">
                                         <div class="news__avatar-frame">
-                                            <img src="img/news3.jpg" alt="Рабочее место">
+                                            <img src="img/news3.jpg" alt="Рабочее место" class="news__avatar-img">
                                         </div>
                                     </div>
                                     <div class="news__content">
