--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="wrapper">
         <div class="wrapper__content">
             <header class="header">
-                <div class="container clearfix">
-                        <div class="logo logo__header">
+                <div class="container header__container">
+                        <div class="logo">
                             <a href="#" class="logo__link">
                                 <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                             </a>
@@ -34,7 +34,7 @@
                 <div class="main-top">
                     <img src="img/main-banner.jpg" width="1100" alt="Баннер" class="main-top__img">
                 </div>
-                <div class="container">
+                <div class="container main-content__container">
                     <nav class="nav">
                         <ul class="nav__list">
                             <li class="nav__item nav__item--icon--main nav__item--active">
@@ -189,7 +189,7 @@
         </div>
 
         <footer class="footer">
-            <div class="container">
+            <div class="container footer__container">
                 <p class="copyright">Сделано с любовью и старанием<br>
                     на курсе «HTML + CSS» в 
                     <strong><a href="#" class="copyright__link">LoftSchool</a></strong>.
