--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Коворкинг</title>
-    <meta name="viewport" content="1100">
+    <meta name="viewport" content="1100px">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <div class="wrapper__content">
-            <header class="header">
+            <header class="header .header__container">
                 <div class="container header__container">
                         <div class="logo">
                             <a href="#" class="logo__link">
