--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Коворкинг</title>
-    <meta name="viewport" content="1100px">
+    <meta name="viewport" content="width=1100">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -35,7 +35,7 @@
                     <img src="img/main-banner.jpg" width="1100" alt="Баннер" class="main-top__img">
                 </div>
                 <div class="container main-content__container">
-                    <nav class="nav">
+                    <nav class="nav nav--padding-top">
                         <ul class="nav__list">
                             <li class="nav__item nav__item--icon--main nav__item--active">
                                 <a href="#" class="nav__link"><span>Главная</span></a>
