--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Отзывы</title>
-    <meta name="viewport" content="1100">
+    <meta name="viewport" content="width=1100">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -204,7 +204,7 @@
         </div>
 
         <footer class="footer">
-            <div class="container">
+            <div class="container footer__container">
                 <p class="copyright">Сделано с любовью и старанием<br>
                     на курсе «HTML + CSS» в 
                     <strong><a href="#" class="copyright__link">LoftSchool</a></strong>.
