--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <a href="#" class="nav__link"><span>Главная</span></a>
                             </li>
                             <li class="nav__item nav__item--icon--star">
-                                <a href="#" class="nav__link"><span>Отзывы</span></a>
+                                <a href="reviews.html" class="nav__link"><span>Отзывы</span></a>
                             </li>
                             <li class="nav__item nav__item--icon--wallet">
                                 <a href="#" class="nav__link"><span>Тарифы</span></a>
@@ -106,14 +106,14 @@
             
                         <section class="news">
                             <h2 class="section-title section-title--margin--m">Последние новости</h2>
-                            <ul class="news__list">
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/news1.jpg" alt="Чёрная дыра" class="news__avatar-img">
+                            <ul class="major-list">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/news1.jpg" alt="Чёрная дыра" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>12.10.2016</time>
                                         <h3>Чёрная дыра скидок!</h3>
                                         <p>
@@ -121,13 +121,13 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/news2.jpg" alt="Заражай друзей" class="news__avatar-img">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/news2.jpg" alt="Заражай друзей" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>01.02.2016</time>
                                         <h3>Заражай друзей, получай призы!</h3>
                                         <p>
@@ -136,13 +136,13 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/news3.jpg" alt="Рабочее место" class="news__avatar-img">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/news3.jpg" alt="Рабочее место" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>22.12.2015</time>
                                         <h3>Новое рабочее место для бизнесменов.</h3>
                                         <p>
