--- a/reviews.html
+++ b/reviews.html
@@ -34,10 +34,10 @@
                 <div class="container main-content__container">
                     <nav class="nav">
                         <ul class="nav__list">
-                            <li class="nav__item nav__item--icon--main nav__item--active">
-                                <a href="#" class="nav__link"><span>Главная</span></a>
+                            <li class="nav__item nav__item--icon--main">
+                                <a href="index.html" class="nav__link"><span>Главная</span></a>
                             </li>
-                            <li class="nav__item nav__item--icon--star">
+                            <li class="nav__item nav__item--icon--star nav__item--active">
                                 <a href="#" class="nav__link"><span>Отзывы</span></a>
                             </li>
                             <li class="nav__item nav__item--icon--wallet">
@@ -50,7 +50,7 @@
                         <nav class="breadcrumbs">
                             <ul class="breadcrumbs__list">
                                 <li class="breadcrumds__item">
-                                    <a href="#" class="breadcrumbs__item-link">Главная</a>
+                                    <a href="index.html" class="breadcrumbs__item-link">Главная</a>
                                 </li>
                                 <li class="breadcrumds__item">
                                     <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link--active">Отзывы</a>
@@ -60,14 +60,14 @@
 
                         <section class="reviews">
                             <h2 class="section-title section-title--margin--xs">Отзывы</h2>
-                            <ul class="news__list reviews__list">
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/review1.jpg" alt="Аватар" class="news__avatar-img">
+                            <ul class="major-list reviews__list">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/review1.jpg" alt="Аватар" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>12.10.2016</time>
                                         <h3>Олег Павлов</h3>
                                         <p>
@@ -75,13 +75,13 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/review2.jpg" alt="Аватар" class="news__avatar-img">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/review2.jpg" alt="Аватар" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>01.02.2016</time>
                                         <h3>Эрнест Изиль</h3>
                                         <p>
@@ -89,13 +89,13 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/review_without_photo.jpg.png" alt="Аватар" class="news__avatar-img">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar major-list__avatar--no-avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/review_without_photo.jpg.png" alt="Аватар" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>22.12.2015</time>
                                         <h3>Елена Сургай</h3>
                                         <p>
@@ -103,13 +103,13 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
-                                    <div class="news__avatar">
-                                        <div class="news__avatar-frame">
-                                            <img src="img/review4.jpg" alt="Аватар" class="news__avatar-img">
+                                <li class="major-list__item">
+                                    <div class="major-list__avatar">
+                                        <div class="major-list__avatar-frame">
+                                            <img src="img/review4.jpg" alt="Аватар" class="major-list__avatar-img">
                                         </div>
                                     </div>
-                                    <div class="news__content">
+                                    <div class="major-list__content">
                                         <time>14.08.2015</time>
                                         <h3>Наталья Осадчая</h3>
                                         <p>
