--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <a href="reviews.html" class="nav__link"><span>Отзывы</span></a>
                             </li>
                             <li class="nav__item nav__item--icon--wallet">
-                                <a href="#" class="nav__link"><span>Тарифы</span></a>
+                                <a href="prices.html" class="nav__link"><span>Тарифы</span></a>
                             </li>
                         </ul>
                     </nav>
