--- a/reviews.html
+++ b/reviews.html
@@ -174,7 +174,7 @@
                                     <input class="form__input" type="text" name="name" id="name" placeholder="Андрей">
                                 </div>
                                 
-                                <div class="form__proup-right">
+                                <div class="form__group-right">
                                     <label class="form__input-label" for="vk_link">Ссылка на профиль VK</label>
                                     <input class="form__input" type="url" name="vk_link" id="vk_link" placeholder="vk.com/example">
                                 </div>
@@ -189,11 +189,11 @@
                             <div class="form__group">
                                 <div class="form__radio-area">
                                     <span class="form__radio-text">Отображать фото в отзыве?</span>
-                                    <label class="form__radio-label" for="radio_yes">Да</label>
                                     <input class="form__radiobutton" type="radio" name="question-photo" id="radio_yes" value="yes" checked>
+                                    <label class="form__radio-label" for="radio_yes">Да</label>
                                     
-                                    <label class="form__radio-label" for="radio_no">Нет</label>
                                     <input class="form__radiobutton" type="radio" name="question-photo" id='radio_no' value="no">
+                                    <label class="form__radio-label" for="radio_no">Нет</label>
                                 </div>
 
                                 <input class='btn' type="submit" value="Отправить">
