--- a/reviews.html
+++ b/reviews.html
@@ -21,12 +21,12 @@
                                 <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                             </a>
                         </div>
-                        <div class="contacts">
+                        <address class="contacts">
                             <a href="tel: 88000039210" class="contacts__tel">8 (800) 00-392-10</a>
                             <div class="contacts__workhours">
                                 График работы
                             </div>
-                        </div>
+                        </address>
                 </div>
             </header>
 
@@ -189,11 +189,14 @@
                             <div class="form__group">
                                 <div class="form__radio-area">
                                     <span class="form__radio-text">Отображать фото в отзыве?</span>
+
+                                    <label class="form__radio-label">
                                     <input class="form__radiobutton" type="radio" name="question-photo" id="radio_yes" value="yes" checked>
-                                    <label class="form__radio-label" for="radio_yes">Да</label>
+                                    Да</label>
                                     
+                                    <label class="form__radio-label">
                                     <input class="form__radiobutton" type="radio" name="question-photo" id='radio_no' value="no">
-                                    <label class="form__radio-label" for="radio_no">Нет</label>
+                                     Нет</label>
                                 </div>
 
                                 <input class='btn' type="submit" value="Отправить">
