--- a/reviews.html
+++ b/reviews.html
@@ -65,9 +65,7 @@
                             <ul class="major-list reviews__list">
                                 <li class="major-list__item">
                                     <div class="major-list__avatar">
-                                        <div class="major-list__avatar-frame">
-                                            <img src="img/review1.jpg" alt="Аватар" class="major-list__avatar-img">
-                                        </div>
+                                        <img src="img/review1.jpg" alt="Аватар" class="major-list__avatar-img">
                                     </div>
                                     <div class="major-list__content">
                                         <time>12.10.2016</time>
@@ -79,9 +77,7 @@
                                 </li>
                                 <li class="major-list__item">
                                     <div class="major-list__avatar">
-                                        <div class="major-list__avatar-frame">
-                                            <img src="img/review2.jpg" alt="Аватар" class="major-list__avatar-img">
-                                        </div>
+                                        <img src="img/review2.jpg" alt="Аватар" class="major-list__avatar-img">
                                     </div>
                                     <div class="major-list__content">
                                         <time>01.02.2016</time>
@@ -93,9 +89,7 @@
                                 </li>
                                 <li class="major-list__item">
                                     <div class="major-list__avatar major-list__avatar--no-avatar">
-                                        <div class="major-list__avatar-frame">
-                                            <img src="img/review_without_photo.jpg.png" alt="Аватар" class="major-list__avatar-img">
-                                        </div>
+                                        <img src="img/review_without_photo.jpg.png" alt="Аватар" class="major-list__avatar-img">
                                     </div>
                                     <div class="major-list__content">
                                         <time>22.12.2015</time>
@@ -107,9 +101,7 @@
                                 </li>
                                 <li class="major-list__item">
                                     <div class="major-list__avatar">
-                                        <div class="major-list__avatar-frame">
-                                            <img src="img/review4.jpg" alt="Аватар" class="major-list__avatar-img">
-                                        </div>
+                                        <img src="img/review4.jpg" alt="Аватар" class="major-list__avatar-img">
                                     </div>
                                     <div class="major-list__content">
                                         <time>14.08.2015</time>
@@ -156,7 +148,7 @@
             </div>
 
             <section class="discount">
-                <div class="container container--s">
+                <div class="container container--flex">
                     <p class="discount__text">
                         Для наших новых клиентов мы предлагаем <strong>скидку 50%</strong> на первый день! Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!
                     </p>
@@ -164,7 +156,7 @@
             </section>
 
             <section class="feedback">
-                <div class="container container--s">
+                <div class="container container--flex">
                     <div class="feedback__frame">
                         <h2 class="section-title section-title--margin--xxs">Оставить отзыв</h2>
                         <form action="#" class="form" method="POST">
