create and stylization intro page

--- a/reviews.html
+++ b/reviews.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Отзывы</title>
+    <title>Отзывы - Коворкинг</title>
     <meta name="viewport" content="width=1100">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -35,7 +35,7 @@
                     <nav class="nav">
                         <ul class="nav__list">
                             <li class="nav__item nav__item--icon--main">
-                                <a href="index.html" class="nav__link"><span>Главная</span></a>
+                                <a href="main.html" class="nav__link"><span>Главная</span></a>
                             </li>
                             <li class="nav__item nav__item--icon--star nav__item--active">
                                 <a href="#" class="nav__link"><span>Отзывы</span></a>
@@ -51,7 +51,7 @@
                     <nav class="breadcrumbs">
                         <ul class="breadcrumbs__list">
                             <li class="breadcrumds__item">
-                                <a href="index.html" class="breadcrumbs__item-link">Главная</a>
+                                <a href="main.html" class="breadcrumbs__item-link">Главная</a>
                             </li>
                             <li class="breadcrumds__item">
                                 <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link--active">Отзывы</a>
